# MapMatching4GMNS-0.2

./: MANIFEST.in  MapMatching4GMNS.ipynb  README.docx  setup.py
01_Check_input_data/01_good_input_data_and_result/: QGIS.qgz  route.csv
01_Check_input_data/02_bad_input_data_and_result/: QGIS.qgz  link.csv  route.csv  trace.csv
MapMatching4GMNS/: MapMatching4GMNS.py  README.md  __init__.py  __version__.py  map_match_test.py
data/: QGIS.qgz  agent.csv  cell2zone.csv  get_gps_trace.py  grid.csv  link.csv  link_likelihood.csv  log.txt  node.csv  osm_gps.csv  route.csv  test.py  trace.csv  trace_Excel.xlsx
dependent_libraries_missing_in_windows_system/: README.cd
engine/: CMakeLists.txt  MapMatching4GMNS.cpp  MapMatching4GMNS.h  README.md
src/: CMakeLists.txt  CSVParser.h  MapMatching4GMNS.cpp  get_gps_trace.py  trace2route.cpp
tool/: add_windows_dependent_libraries.py  down_input_data_from_Github.py  down_input_data_from_Github2.py  get_gps_trace.py
